# cmake_basics

./: CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: ArgParser.cpp.E7FCBCFC6F12AB6C.idx  ArgParser.hpp.4558150CC2FEE1A2.idx  Colours.hpp.27F344A1474BFD6F.idx  Graphics.hpp.20176DD38E84AA75.idx  main.cpp.DDBF231AB90870AF.idx
src/: CMakeLists.txt  main.cpp
src/colors/: CMakeLists.txt  Colors.hpp
src/colours/: CMakeLists.txt  Colors.hpp  Colours.hpp
src/graphic/: CMakeLists.txt  Graphics.hpp  Rainbow.hpp
src/utility/: ArgParser.cpp  ArgParser.hpp  CMakelists.txt
